crates/oxc_react_compiler/tests/snapshots/valid-new-date-concat-receiver.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-concat-receiver.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const args = [0].concat();
		t0 = new Date(...args);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
