crates/oxc_react_compiler/tests/snapshots/valid-new-date-concat-spread-arguments.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-concat-spread-arguments.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component(t0) {
	const $ = _c(1);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = new Date(...[].concat(...[0]));
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
