crates/oxc_react_compiler/tests/snapshots/valid-new-date-map-set-extra-argument.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-map-set-extra-argument.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component(t0) {
	const $ = _c(1);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const result = new Map().set(1, 2, 3);
		t1 = new Date(...result);
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
