crates/oxc_react_compiler/tests/snapshots/valid-new-date-mapped-sparse-array.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-mapped-sparse-array.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component(t0) {
	const $ = _c(1);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const args = [,].map(_temp);
		t1 = new Date(...args);
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
function _temp(value) {
	return value;
}
